Code review fixes: - Removed unnecessary flex-shrink property. - Removed browser specific calc properties. - Replaced brackets with quotes on classname where classnames are not dynamically created - Fixed issue when search term is truncated when search term is long

--- a/packages/components/src/search/style.scss
+++ b/packages/components/src/search/style.scss
@@ -64,8 +64,7 @@
 		margin: 0;
 		padding-left: 10px;
 		display: flex;
-		max-width: -webkit-calc(100% - 60px);
-		max-width: -moz-calc(100% - 60px);
+		width: 100%;
 		max-width: calc(100% - 60px);
 		overflow: hidden;
 		justify-content: flex-end;
@@ -84,7 +83,6 @@
 
 
 	.components-base-control .woocommerce-tag {
-		flex-shrink: 0;
 		max-height: 24px;
 	}
 
